# brevyx

./: CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
assets/animations/: blink.css  breathe.css
config/: default_config.toml
packaging/: brevyx.service
src/: app.rs  error.rs  lib.rs  main.rs
src/config/: mod.rs  schema.rs
src/daemon/: mod.rs
src/overlay/: animation.rs  mod.rs  window.rs
src/scheduler/: mod.rs  reminder.rs
src/tray/: mod.rs
systemd/: brevyx.service  zenguard.service
tests/: pipeline.rs
