[package]
name        = "brevyx"
version     = "0.1.2"
edition     = "2021"
description = "Production-grade Ubuntu wellness daemon with animated GTK4 reminders"
license     = "MIT"
homepage    = "https://github.com/sheheemmulakkal/brevyx"
repository  = "https://github.com/sheheemmulakkal/brevyx"
keywords    = ["health", "eye-care", "reminder", "gtk", "daemon"]
categories  = ["command-line-utilities"]

[lib]
name = "brevyx"
path = "src/lib.rs"

[[bin]]
name = "brevyx"
path = "src/main.rs"

# ── UI ────────────────────────────────────────────────────────────────────────
[dependencies.gtk4]
version  = "0.9"
features = ["v4_12"]

[dependencies.glib]
version = "0.20"

[dependencies.gdk4]
version = "0.9"

[dependencies.gio]
version = "0.20"

# ── System tray ───────────────────────────────────────────────────────────────
# `ksni` implements the StatusNotifierItem D-Bus protocol directly.
# No GTK3 or system tray library headers required — works on X11 and Wayland.
[dependencies.ksni]
version = "0.2"

# ── Error handling ────────────────────────────────────────────────────────────
[dependencies.anyhow]
version = "1"

[dependencies.thiserror]
version = "2"

# ── Configuration (serde + serde_derive + toml) ───────────────────────────────
[dependencies.serde]
version  = "1"
features = ["derive"]   # serde_derive is bundled via this feature

[dependencies.toml]
version = "0.8"

# ── Logging ───────────────────────────────────────────────────────────────────
[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version  = "0.3"
features = ["env-filter"]

# ── Async runtime ─────────────────────────────────────────────────────────────
[dependencies.tokio]
version  = "1"
features = ["full"]

# ── Config file watching (hot reload) ─────────────────────────────────────────
[dependencies.notify]
version = "7"

# ── Time handling ─────────────────────────────────────────────────────────────
[dependencies.chrono]
version  = "0.4"
features = ["serde"]   # enables Serialize/Deserialize on chrono types

# ── XDG base directories ──────────────────────────────────────────────────────
[dependencies.dirs]
version = "5"

# ── Dev / test ────────────────────────────────────────────────────────────────
[dev-dependencies]
tempfile = "3"

# `test-util` adds `tokio::time::pause` / `advance` for deterministic timer
# tests.  Kept in dev-dependencies so it does not ship in the production binary.
[dev-dependencies.tokio]
version  = "1"
features = ["test-util"]

# ── Release profile ───────────────────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"

# ── cargo-deb packaging ───────────────────────────────────────────────────────
[package.metadata.deb]
maintainer          = "Brevyx Contributors"
copyright           = "2024, Brevyx Contributors"
license-file        = ["LICENSE", "0"]
extended-description = """\
Brevyx runs silently as a systemd user service and shows full-screen \
animated overlay popups at configurable intervals, reminding you to rest \
your eyes, drink water, move, and take breaks."""
depends   = "$auto, libgtk-4-1 (>= 4.12), librsvg2-common"
section   = "utils"
priority  = "optional"
assets    = [
  # binary
  ["target/release/brevyx",        "usr/bin/",                  "755"],
  # bundled assets
  ["assets/eye_blink.svg",           "usr/share/brevyx/",       "644"],
  ["config/default_config.toml",     "usr/share/brevyx/",       "644"],
  # documentation
  ["README.md",                      "usr/share/doc/brevyx/",   "644"],
  ["LICENSE",                        "usr/share/doc/brevyx/",   "644"],
]

[package.metadata.deb.systemd-units]
# installs packaging/brevyx.service to /usr/lib/systemd/user/
# enable = false so the user opts in via `systemctl --user enable brevyx`
unit-scripts = "packaging/"
enable       = false
start        = false
